--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "catalog",
-  "version": "1.0.0",
-  "description": "catalog based on barcodes",
-  "main": "index.js",
+  "name": "Catalog",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Andrew Assarattanakul",
-  "license": "ISC"
+  "author": "Andrew Assarttanakul",
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "bunyan": "~1.5.1",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "express-bunyan-logger": "^1.2.0",
+    "jade": "~1.11.0",
+    "serve-favicon": "~2.3.0"
+  }
 }
