--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "request": "^2.67.0",
     "serve-favicon": "~2.3.0"
   }
 }
