Moved search upc code into a model so the router can be cleaner.

--- a/config/config.js.example
+++ b/config/config.js.example
@@ -1,5 +1,15 @@
 module.exports = {
   production: {
+    database: {
+      client: 'mysql',
+      connection: {
+        host: '127.0.0.1',
+        user: 'catalog',
+        password: '',
+        database: 'catalog',
+        charset: 'utf8'
+      }
+    },
     logger: {
       name: 'Catalog',
       streams: [{
