--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "author": "Andrew Assarttanakul",
   "dependencies": {
+    "bluebird": "^3.1.1",
     "body-parser": "~1.13.2",
+    "bookshelf": "^0.9.1",
     "bunyan": "~1.5.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "knex": "^0.9.0",
+    "mysql": "^2.10.0",
     "request": "^2.67.0",
     "serve-favicon": "~2.3.0"
   }
