Removed user from the config for the database because it isn't needed.

--- a/config/config.js.example
+++ b/config/config.js.example
@@ -4,7 +4,7 @@ module.exports = {
       client: 'mysql',
       connection: {
         host: '127.0.0.1',
-        user: 'catalog',
+        user: '',
         password: '',
         database: 'catalog',
         charset: 'utf8'
