Added knexfile that uses the database information from the config/config.js file.

--- a/config/config.js.example
+++ b/config/config.js.example
@@ -8,6 +8,9 @@ module.exports = {
         password: '',
         database: 'catalog',
         charset: 'utf8'
+      },
+      migrations: {
+        tableName: 'knex_migrations'
       }
     },
     logger: {
