--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "knex": "^0.9.0",
+    "method-override": "^2.3.5",
     "mysql": "^2.10.0",
     "request": "^2.67.0",
     "serve-favicon": "~2.3.0"
