--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
     "flux": "^2.1.1",
     "jade": "~1.11.0",
     "knex": "^0.9.0",
     "method-override": "^2.3.5",
     "mysql": "^2.10.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^0.2.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "request": "^2.67.0",
