--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "~1.13.2",
     "bookshelf": "^0.9.1",
     "bunyan": "~1.5.1",
+    "connect-session-knex": "^1.0.17",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
